feature: generate model R file (+6 squashed commits) Squashed commits: [713c16f] feature: add renv to replace packrat [0afca08] chore: remove packrat dependency [b99921e] chore: dynamic filename for notebook, vscode workspace and project .todo [0901bb7] docs: Update readme to dynamic name, knitting instructions, [6e3cbfd] feature: update setup file with requirements and example file [eec58f3] chore: Remove python choice from cookiecutter setup template

--- a/{{ cookiecutter.repo_name }}/notebooks/{{cookiecutter.project_name}}-notebook.Rmd
+++ b/{{ cookiecutter.repo_name }}/notebooks/{{cookiecutter.project_name}}-notebook.Rmd
@@ -44,8 +44,8 @@ output:
 **A clear description of data and its source should be provided in this section.**
 
 - Read/Import Data
-Read/Import Data:
-```{r}
+
+```{r read and import data}
 library('here')
 DATA_FILE <- here('src', 'data', 'TODO:.csv')
 data <- read.csv(DATA_FILE)
