chore: commit todo (+5 squashed commits) Squashed commits: [1350f84] Add demo child section [866c90f] chore: gitignore [47c6d52] docs: readme filestructure and refine [f610285] feature: bibleography [e59b1b3] Move rmarkdown into /templates with minimal and detailed WIP

--- a/{{ cookiecutter.repo_name }}/notebooks/templates/minimal.Rmd
+++ b/{{ cookiecutter.repo_name }}/notebooks/templates/minimal.Rmd
@@ -23,7 +23,7 @@ output:
 
 by: {{cookiecutter.author_name}} {{cookiecutter.author_email}}
 
-## Introduction*
+## Introduction
 
 {{cookiecutter.description}}
 
